@@ -1,5 +1,5 @@
 /* imapfront-auth.c - IMAP authentication front-end
- * Copyright (C) 2002  Bruce Guenter <bruceg@em.ca> or FutureQuest, Inc.
+ * Copyright (C) 2005  Bruce Guenter <bruceg@em.ca> or FutureQuest, Inc.
  * Development of this program was sponsored by FutureQuest, Inc.
  *
  * This program is free software; you can redistribute it and/or modify it
@@ -344,6 +344,7 @@ static int startup(int argc, char* argv[])
   return 1;
 }
 
+const int authenticating = 1;
 extern void set_timeout(void);
 
 int main(int argc, char* argv[])
