@@ -25,6 +25,10 @@ environment and executes <tt>PROGRAM</tt>.  It also offers RFC 1734
 complient AUTH support through <a
 href="cvm-sasl.html">cvm-sasl</a>.</p>
 
+<p>If <tt>$AUTH_TIMEOUT</tt> or <tt>$AUTH_SESSION_TIMEOUT</tt> are set,
+they override <tt>$TIMEOUT</tt> and <tt>$SESSION_TIMEOUT</tt>
+respectively.</p>
+
 <h2>pop3front-maildir</h2>
 
 <p>Usage: <tt>pop3front-maildir [ DEFAULT-MAILDIR ]</tt></p>
